# duplo

./: .envrc  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  shell.nix
duplo/result/: __init__.py  base.py  exceptions.py  internal.py
tacos/result/: __init__.py  exceptions.py  internal.py
tests/: test_result.py
tests/duplo/: test_result.py
