[tool.poetry]
name = "duplo"
version = "0.0.1"
description = "Small business logic building blocks to get stuff done with simple functional programming"
authors = ["Sam Pratt <samj.pratt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
